tests/paczka1/small_fuzzy/25663389.err
Error in line 1: pWuXMR A745 0,1
Error in line 7: pWuXMR A421 44,7
Error in line 15: xj0B A421 57,31
